# shaked-wg-agent

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  setup-repo.sh
.claude/: launch.json  settings.json
.github/workflows/: aos-governance-integrity.yml
_COMMUNICATION/: README.md
_COMMUNICATION/cowork/: aos_package_validator_v1.2.py
_COMMUNICATION/team_00/: AOS_CANONIZATION_WORK_PLAN.md  DECISIONS_ISRAEL_STRATEGY_v1.0.0.md  DECISIONS_S001_CLOSE_v1.0.0.md  DRIFT_INVESTIGATION_REQUEST_FORBIDDEN_PATTERNS_v1.0.0.md
_COMMUNICATION/team_100/: ACK_SWG_W1_SPRINT_v1.0.0.md  GOVERNANCE_CHANGE_REQUEST_CLAUDE_MD_DIRECTORY_AUTHORITY_2026-04-30_v1.0.0.md  HANDOFF_SELF_100_SWG-W1-SPRINT_2026-05-03_v1.0.0.md  HANDOFF_SWG_W1_TO_TEAM_00_2026-05-06_v1.0.0.md  (+4 more)
_aos/: MILESTONE_MAP.md  README.md  definition.yaml  deploy-spec.yaml  ideas.json  metadata.yaml  project_identity.yaml  roadmap.yaml  team_assignments.yaml
data/: agent.json  config.json.bak  listings.json  runs.json  shaked_curated_2026-05-01.html  shaked_curated_2026-05-06.html  shaked_top5_2026-05-01.html  sources.json
deploy/: setup_server.sh
docs/: DEVELOPER_GUIDE.md
scripts/: env_from_sfa.sh  generate_proof.py  profile_quality_evidence.py  public_report_urls.sh  run_dror_launch.sh
shaked_wg_agent/: __init__.py  __main__.py  config.py  outreach.py  persistence.py  runner.py  scorer.py
tests/: test_config.py  test_ftps_upload.py  test_html_report.py  test_negative_signals.py  test_outreach_lifecycle.py  test_persistence.py  test_scorer.py
(+693 files in other folders)
